Hay que seguir con registrar mascota

--- a/Front/html/perfilPubliRevision.html
+++ b/Front/html/perfilPubliRevision.html
@@ -108,7 +108,7 @@
         <section class="portada">
             <section>
                 <div>
-                    <h2>Hola! Mi nombre es Edgar</h2>
+                    <h2>Hola! Ayudame a encontrar mi hogar</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
                 </div>
             </section>
@@ -119,7 +119,7 @@
             <img src="../fotos/golden.jpg" alt="fotoDescripcion" width="100%">
           </div>
           <div class="descripcion">
-            <h2>SOBRE EDGAR</h2>
+            <h2>SOBRE MI</h2>
             <p>Rem necessitatibus atque vitae excepturi eum esse minus nulla ad corporis obcaecati perferendis porro dignissimos repellat debitis maiores. At vel explicabo praesentium dignissimos nulla laboriosam.
             Est consequatur, autem aut voluptas.</p>
             <br>
@@ -150,8 +150,11 @@
             <br>
             <br>
             <!--a href="formularioAdopcion.html" type="button" class="botonAdoptar">Adoptar</a-->
-            <button class="boton-aceptar" v-on:click="aceptar">Aceptar</button>
-            <button class="boton-denegar" v-on:click="denegar">Denegar</button>
+            
+            <div class="botonesAprobacion">
+              <button class="boton-aceptar" v-on:click="aceptar">Aceptar</button>
+              <button class="boton-denegar" v-on:click="denegar">Denegar</button>
+            </div>
         </div>
         </section>
       </section>
