--- a/Front/html/registrarMascota.html
+++ b/Front/html/registrarMascota.html
@@ -34,7 +34,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="../jscript/menu.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   </head>
   
   <body>
@@ -48,7 +48,10 @@
           <div class="usuario-icon">
               <i class="fas fa-user-circle"></i>
           </div>
-          <p>Juan Perez</p>
+          <div id= appVue>          
+            <p>{{nombre}}</p>          
+  
+          </div>
         </div>
 
         <div id="menu2" class="menu2" onclick="openSidebar()">
@@ -97,8 +100,9 @@
         </div>
         <br>
         <form
-          action="https://formspree.io/f/xwkawqpa"
-          method="post"
+          id = "appVueRegistroMasc" 
+          onsubmit="return false" 
+          autocomplete="on"
           target="_blank"
         >
           <section class="datos-personales">
@@ -271,6 +275,8 @@
           </section>
       </section>
     </footer>
-
+    <script type="text/javascript" src="../jscript/menu.js"></script>
+    <script type="text/javascript" src="../jscript/registrarMascota.js"></script>
+    <script type="text/javascript" src="../jscript/user.js"></script>
   </body>
 </html>
