Falta registrar mascota

--- a/Front/html/perfilPubliRevision.html
+++ b/Front/html/perfilPubliRevision.html
@@ -139,7 +139,7 @@
                 </tr>
                 <tr>
                     <th>Especie:</th>
-                    <td>Gato</td>
+                    <td>Perro</td>
                 </tr>
             </table>
             <br>
