--- a/Front/html/darEnAdopcion.html
+++ b/Front/html/darEnAdopcion.html
@@ -53,9 +53,6 @@
             <p>MENU</p>
             <section class="conj-botones-menu">
                 <section>
-                    <a href="hogaresDeTransito.html" type="button" class="boton-menu">HOGAR DE TRANSITO</a>
-                </section>
-                <section>
                   <a href="index.html" type="button" class="boton-menu">INICIO</a>
                 </section>
                 <section>
@@ -71,10 +68,19 @@
                     <a href="registrarMascota.html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
                 </section>
                 <section>
-                    <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
+                    <a href="hogaresDeTransito.html" type="button" class="boton-menu"> HOGARES DE TRANSITO</a>
+                </section>
+                <section>
+                    <a href="mascotasPerdidasPubli.html" type="button" class="boton-menu">MASCOTAS PERDIDAS</a>
+                </section>
+                <!-- <section>
+                    <a href="aprobarPublicaciones.html" type="button" class="boton-menu">APROBAR PUBLICACIONES</a>
                 </section>
                 <section>
                   <a href="administrador.html" type="button" class="boton-menu">CONFIGURAR PARAMETROS</a>
+                </section> -->
+                <section>
+                    <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
                 </section>
             </section>
         </div>
@@ -96,7 +102,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 1 -->
+                    <a href="preguntasDarEnAdopcion.html"> <!-- tarjeta 1 -->
                         <span class="card-header" style="background-image: url(../fotos/categoriaPerros/perro1.jpg);">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -130,7 +136,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 2 -->
+                    <a href="preguntasDarEnAdopcion.html"> <!-- tarjeta 2 -->
                         <span class="card-header" style="background-image: url(../fotos/categoriaPerros/perro2.jpg);">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -164,7 +170,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 3 -->
+                    <a href="preguntasDarEnAdopcion.html"> <!-- tarjeta 3 -->
                         <span class="card-header" style="background-image: url(../fotos/categoriaPerros/perro3.jpg);">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -198,7 +204,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 4 -->
+                    <a href="preguntasDarEnAdopcion.html"> <!-- tarjeta 4 -->
                         <span class="card-header" style="background-image: url(../fotos/categoriaPerros/perro4.jpg);">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -232,7 +238,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 5 -->
+                    <a href="preguntasDarEnAdopcion.html"> <!-- tarjeta 5 -->
                         <span class="card-header" style="background-image: url(../fotos/categoriaPerros/perro5.jpg);">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -266,7 +272,7 @@
               
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 6 -->
+                    <a href="preguntasDarEnAdopcion.html"> <!-- tarjeta 6 -->
                         <span class="card-header" style="background-image: url(../fotos/categoriaPerros/perro6.jpg);">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -299,7 +305,7 @@
                 </article>
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 7 -->
+                    <a href="preguntasDarEnAdopcion.html"> <!-- tarjeta 7 -->
                         <span class="card-header" style="background-image: url(../fotos/categoriaPerros/perro7.jpg);">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -333,7 +339,7 @@
 
                   <article class="card">
 
-                      <a href="adoptarPerfil.html"> <!-- tarjeta 8 -->
+                      <a href="preguntasDarEnAdopcion.html"> <!-- tarjeta 8 -->
                           <span class="card-header" style="background-image: url(../fotos/categoriaPerros/perro8.jpg);">
                               <span class="card-title">
                                   <h3>Nombre</h3>
@@ -367,7 +373,7 @@
 
                   <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 8 -->
+                    <a href="preguntasDarEnAdopcion.html"> <!-- tarjeta 8 -->
                         <span class="card-header" style="background-image: url(../fotos/categoriaPerros/perro9.jpg);">
                             <span class="card-title">
                                 <h3>Nombre</h3>
