--- a/Front/html/hogaresDeTransito.html
+++ b/Front/html/hogaresDeTransito.html
@@ -68,14 +68,20 @@
                     <a href="registrarMascota.html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
                 </section>
                 <section>
-                    <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
+                    <a href="hogaresDeTransito.html" type="button" class="boton-menu"> HOGARES DE TRANSITO</a>
+                </section>
+                <section>
+                    <a href="mascotasPerdidasPubli.html" type="button" class="boton-menu">MASCOTAS PERDIDAS</a>
+                </section>
+                <!-- <section>
+                    <a href="aprobarPublicaciones.html" type="button" class="boton-menu">APROBAR PUBLICACIONES</a>
                 </section>
                 <section>
                   <a href="administrador.html" type="button" class="boton-menu">CONFIGURAR PARAMETROS</a>
-                </section>
+                </section> -->
                 <section>
-                    <a href="hogaresDeTransito.html" type="button" class="boton-menu">HOGAR DE TRANSITO</a>
-                  </section>
+                    <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
+                </section>
             </section>
         </div>
     </nav>
@@ -95,7 +101,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 1 -->
+                    <a onclick="hogar()"> <!-- tarjeta 1 -->
                         <span class="card-header">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -190,7 +196,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 2 -->
+                    <a onclick="hogar()"> <!-- tarjeta 2 -->
                         <span class="card-header">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -284,7 +290,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 3 -->
+                    <a onclick="hogar()"> <!-- tarjeta 3 -->
                         <span class="card-header">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -378,7 +384,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 4 -->
+                    <a onclick="hogar()"> <!-- tarjeta 4 -->
                         <span class="card-header">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -472,7 +478,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 5 -->
+                    <a onclick="hogar()"> <!-- tarjeta 5 -->
                         <span class="card-header">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -566,7 +572,7 @@
               
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 6 -->
+                    <a onclick="hogar()"> <!-- tarjeta 6 -->
                         <span class="card-header">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -660,7 +666,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 7 -->
+                    <a onclick="hogar()"> <!-- tarjeta 7 -->
                         <span class="card-header">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -754,7 +760,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 8 -->
+                    <a onclick="hogar()"> <!-- tarjeta 8 -->
                         <span class="card-header">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -848,7 +854,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 9 -->
+                    <a onclick="hogar()"> <!-- tarjeta 9 -->
                         <span class="card-header">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -993,5 +999,6 @@
       </footer>
       <script type="text/javascript" src="../jscript/menu.js"></script>
       <script type="text/javascript" src="../jscript/adoptar.js"></script>
+      <script type="text/javascript" src= "../jscript/alertaHogar.js"></script>
 </body>
 </html>
