--- a/Front/html/index.html
+++ b/Front/html/index.html
@@ -67,21 +67,17 @@
                 <section>
                     <a href="hogaresDeTransito.html" type="button" class="boton-menu"> HOGARES DE TRANSITO</a>
                 </section>
-
                 <section>
+                    <a href="mascotasPerdidasPubli.html" type="button" class="boton-menu">MASCOTAS PERDIDAS</a>
+                </section>
+                <!-- <section>
                     <a href="aprobarPublicaciones.html" type="button" class="boton-menu">APROBAR PUBLICACIONES</a>
                 </section>
-
-
-                <section>
-                    <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
-                </section>
-
-               
-
-
                 <section>
                   <a href="administrador.html" type="button" class="boton-menu">CONFIGURAR PARAMETROS</a>
+                </section> -->
+                <section>
+                    <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
                 </section>
             </section>
         </div>
@@ -91,7 +87,7 @@
         <section class="portada">
             <div>
                 <h2>REFUGIO DE MASCOTAS</h2>
-                <p>adopta <span id="palabraAmor">amor</span> puro</p>
+                <p>Adoptá <span id="palabraAmor">amor</span> puro</p>
             </div>    
         </section>
 
@@ -102,7 +98,7 @@
             <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error vitae porro temporibus dolorum repellat, nisi velit dicta nihil, esse corporis architecto a minima! Neque recusandae ex officia sequi, voluptatem aliquam?
             Magni laboriosam cum harum sed.</b>
             <p>Rem necessitatibus atque vitae excepturi eum esse minus nulla ad corporis obcaecati perferendis porro dignissimos repellat debitis maiores. At vel explicabo praesentium dignissimos nulla laboriosam.
-            Est consequatur corrupti error architecto ab earum mollitia magnam animi fugiat esse deserunt pariatur tempora, qui debitis sequi nesciunt nostrum ducimus, autem aut voluptas. Nulla suscipit nobis aperiam veritatis illum.</p>
+            Est consequatur corrupti error architecto ab earum mollitia magnam animi fugiat esse deserunt pariatur tempora, qui debitis sequi nesciunt nostrum ducimus, autem aut voluptas. Nulla suscipit nobis aperiam veritatis illum que vitae excepturi eum esse minus nulla ad corporis obcaecati perferendis porro dignissimos repellat debitis maiores. At vel explicabo praesentium dignissimos nulla laboriosam et consectetur adipisicing necessitatibus.</p>
           </div>
           <div class="imgDescripcion">
             <img src="../fotos/fotoDescripcion.jpg" alt="fotoDescripcion" width="100%">
