--- a/Front/html/PerfilPerdide.html
+++ b/Front/html/PerfilPerdide.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Edgar</title>
-    <link rel="stylesheet" href="../css/estilosAdoptarPerfil.css">
+    <title>Perdide</title>
+    <link rel="stylesheet" href="../css/estilosPerfilPerdide.css">
     <!-- .ICO -->
     <link rel="icon" href="../fotos/huella.ico">
     <style> @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;1,300&display=swap');</style>
@@ -120,7 +120,7 @@
         <section class="portada">
             <section>
                 <div>
-                    <h2>Hola! Mi nombre es Edgar</h2>
+                    <h2>Hola! Estoy perdido</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
                 </div>
             </section>
@@ -156,7 +156,7 @@
           <br>
 
           <div class="descripcion">
-            <h2>SOBRE EDGAR</h2>
+            <h2>SOBRE MI</h2>
             <p>Rem necessitatibus atque vitae excepturi eum esse minus nulla ad corporis obcaecati perferendis porro dignissimos repellat debitis maiores. At vel explicabo praesentium dignissimos nulla laboriosam.
             Est consequatur, autem aut voluptas.</p>
             <br>
@@ -186,13 +186,7 @@
             </div>
             <br>
             <br>
-            <a href="formularioAdopcion.html" type="button" class="botonAdoptar" onclick="alerta()">Adoptar</a>
-
-            <script>
-              function alerta(){
-                alert("Adoptaste crack!");
-              }
-            </script>
+            <a type="button" class="botonAdoptar" onclick="perdide()"> Es mío! </a>
 
         </div>
          
@@ -241,5 +235,6 @@
         </section>
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+      <script type="text/javascript" src= "../jscript/alertaPerdide.js"></script>
+    </body>
 </html>
