--- a/Front/html/perfilPubliRevision.html
+++ b/Front/html/perfilPubliRevision.html
@@ -79,28 +79,37 @@
             </button>
             <p>MENU</p>
             <section class="conj-botones-menu">
-              <section>
-                <a href="index.html" type="button" class="boton-menu">INICIO</a>
-              </section>
-              <section>
-                  <a href="adoptar.html" type="button" class="boton-menu">ADOPTAR</a>
-              </section>
-              <section>
-                  <a href="darEnAdopcion.html" type="button" class="boton-menu">DAR EN ADOPCION</a>
-              </section>
-              <section>
-                  <a href="encontreUnaMascota.html" type="button" class="boton-menu">ENCONTRE A UNA MASCOTA</a>
-              </section>
-              <section>
-                  <a href="registrarMascota.html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
-              </section>
-              <section>
-                  <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
-              </section>
-              <section>
-                <a href="administrador.html" type="button" class="boton-menu">CONFIGURAR PARAMETROS</a>
-              </section>
-          </section>
+                <section>
+                  <a href="index.html" type="button" class="boton-menu">INICIO</a>
+                </section>
+                <section>
+                    <a href="adoptar.html" type="button" class="boton-menu">ADOPTAR</a>
+                </section>
+                <section>
+                    <a href="darEnAdopcion.html" type="button" class="boton-menu">DAR EN ADOPCION</a>
+                </section>
+                <section>
+                    <a href="encontreUnaMascota.html" type="button" class="boton-menu">ENCONTRE A UNA MASCOTA</a>
+                </section>
+                <section>
+                    <a href="registrarMascota.html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
+                </section>
+                <section>
+                    <a href="hogaresDeTransito.html" type="button" class="boton-menu"> HOGARES DE TRANSITO</a>
+                </section>
+                <section>
+                    <a href="mascotasPerdidasPubli.html" type="button" class="boton-menu">MASCOTAS PERDIDAS</a>
+                </section>
+                <!-- <section>
+                    <a href="aprobarPublicaciones.html" type="button" class="boton-menu">APROBAR PUBLICACIONES</a>
+                </section>
+                <section>
+                  <a href="administrador.html" type="button" class="boton-menu">CONFIGURAR PARAMETROS</a>
+                </section> -->
+                <section>
+                    <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
+                </section>
+            </section>
         </div>
     </nav>
 
