Cargamos las caracteristicas de la org

--- a/Front/html/index.html
+++ b/Front/html/index.html
@@ -70,10 +70,10 @@
                 <section>
                     <a href="mascotasPerdidasPubli.html" type="button" class="boton-menu">MASCOTAS PERDIDAS</a>
                 </section>
-                <!-- <section>
+                 <section>
                     <a href="aprobarPublicaciones.html" type="button" class="boton-menu">APROBAR PUBLICACIONES</a>
                 </section>
-                <section>
+                <!--section>
                   <a href="administrador.html" type="button" class="boton-menu">CONFIGURAR PARAMETROS</a>
                 </section> -->
                 <section>
