--- a/Front/html/perfilPubliRevision.html
+++ b/Front/html/perfilPubliRevision.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Edgar</title>
+    <title>Mascota</title>
     <link rel="stylesheet" href="../css/estilosPerfilRevision.css">
     <!-- .ICO -->
     <link rel="icon" href="../fotos/huella.ico">
@@ -134,10 +134,10 @@
             <br>
             <br>
             <table>
-                <tr>
+                <!--tr>
                     <th>Apodo:</th>
                     <td>Edgar</td>
-                </tr>
+                </tr-->
                 <tr>
                     <th>Sexo:</th>
                     <td>Macho</td>
@@ -161,7 +161,9 @@
             <!--a href="formularioAdopcion.html" type="button" class="botonAdoptar">Adoptar</a-->
             
             <div class="botonesAprobacion">
-              <button class="boton-aceptar" v-on:click="aceptar">Aceptar</button>
+              <!--button class="boton-aceptar" v-on:click="aceptar">Aceptar</button-->
+              <a href="mascotasPerdidasPubli.html" type="button" class="boton-aceptar">Aceptar</a>
+              
               <button class="boton-denegar" v-on:click="denegar">Denegar</button>
             </div>
         </div>
