--- a/Front/html/EscanearChapita.html
+++ b/Front/html/EscanearChapita.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Encontrar mascota</title>
+    <title>Escanear Chapita</title>
     <link rel="icon" href="../fotos/patitapro.png">
     <style> @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;1,300&display=swap');</style>
     <link rel="stylesheet" href="../css/escanearChapita.css">
