--- a/Front/html/FormularioSinChapita.html
+++ b/Front/html/FormularioSinChapita.html
@@ -35,6 +35,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <script type="text/javascript" src="../jscript/menu.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   </head>
   
   <body>
@@ -44,12 +45,15 @@
         <h2>Patitas</h2>
       </div>
 
-        <div class="usuario">
-          <div class="usuario-icon">
-              <i class="fas fa-user-circle"></i>
-          </div>
-          <p>Juan Perez</p>
+      <div class="usuario">
+        <div class="usuario-icon">
+            <i class="fas fa-user-circle"></i>
         </div>
+        <div id= appVue>          
+          <p>{{nombre}}</p>          
+
+        </div>
+      </div>
 
         <div id="menu2" class="menu2" onclick="openSidebar()">
           <button>
