--- a/Front/html/adoptarPerfil.html
+++ b/Front/html/adoptarPerfil.html
@@ -50,6 +50,7 @@
     <!-- FONT DE MENU -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
     <script type="text/javascript" src="../jscript/menu.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   </head>
   
   <body>
@@ -59,14 +60,17 @@
           <h2>Patitas</h2>
         </div>
 
-        <div class="usuario">
-          <div class="usuario-icon">
-              <i class="fas fa-user-circle"></i>
-          </div>
-          <div class="nombre">
-              <p>Juan Perez</p>
-          </div>
+        
+      <div class="usuario">
+        <div class="usuario-icon">
+            <i class="fas fa-user-circle"></i>
         </div>
+        <div id= appVue>          
+          <p>{{nombre}}</p>          
+
+        </div>
+      </div>
+
 
         <div id="menu2" class="menu2" onclick="openSidebar()">
           <button>
