--- a/Front/html/perfilPubliRevision.html
+++ b/Front/html/perfilPubliRevision.html
@@ -47,6 +47,7 @@
     <!-- FONT DE MENU -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
     <script type="text/javascript" src="../jscript/menu.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   </head>
   
   <body>
@@ -60,8 +61,9 @@
           <div class="usuario-icon">
               <i class="fas fa-user-circle"></i>
           </div>
-          <div class="nombre">
-              <p>Juan Perez</p>
+          <div id= appVue>          
+            <p>{{nombre}}</p>          
+  
           </div>
         </div>
 
