Ya trae las mascotas

--- a/Front/html/index.html
+++ b/Front/html/index.html
@@ -162,5 +162,6 @@
       </footer>
       <script type="text/javascript" src="../jscript/menu.js"></script>
       <script type="text/javascript" src="../jscript/adoptar.js"></script>
+      <script type="text/javascript" src="../jscript/user.js"></script>
 </body>
 </html>
