--- a/Front/html/registrarMascota.html
+++ b/Front/html/registrarMascota.html
@@ -251,6 +251,7 @@
             </fieldset>
             
             <button class="boton-registrarse" type="submit" v-on:click="registrar">Registrar</button>
+            <a id="volverInicio" href="index.html" target = "_self"></a>
             <!-- <img src="../fotos/encontrarMascota.jpeg" class="fotoPerrito" alt="perrito"> -->
           </section>
         </form>
