--- a/Front/html/darEnAdopcion.html
+++ b/Front/html/darEnAdopcion.html
@@ -103,7 +103,7 @@
                 <article class="card" v-for="mascota in mascotas">
 
                     <a href="preguntasDarEnAdopcion.html"> <!-- tarjeta 1 -->
-                        <span class="card-header" style="background-image: url(mascota.fotoAnimales[0]);">
+                        <span class="card-header" style="background-image: url(../fotos/categoriaPerros/perro1.jpg);">
                             <span class="card-title">
                                 <h3>{{mascota.nombre}}</h3>
                             </span>
@@ -117,6 +117,7 @@
                                             <i class="fas fa-paw"></i>
                                         </div>
                                         <p>{{mascota.sexo}}</p>
+                                        <p>{{mascota.fotoAnimales[0].direccion}}</p>
                                     </div>
                                 </li>
                                 <li>
@@ -125,6 +126,7 @@
                                             <i class="fas fa-paw"></i>
                                         </div>
                                         <p>{{mascota.edad}}</p>
+                                        
                                     </div>
                                 </li>
                             </ul>
