--- a/Front/html/darEnAdopcion.html
+++ b/Front/html/darEnAdopcion.html
@@ -100,10 +100,10 @@
 
             <section class="cards" id="vueAdop" >
 
-                <article class="card" v-for="mascota in mascotas">
+                <article class="card" v-for="(mascota, index) in mascotas">
 
                     <a href="preguntasDarEnAdopcion.html"> <!-- tarjeta 1 -->
-                        <span class="card-header" style="background-image: url(../fotos/categoriaPerros/perro1.jpg);">
+                        <span class="card-header" :style= "getFoto(index)" >
                             <span class="card-title">
                                 <h3>{{mascota.nombre}}</h3>
                             </span>
@@ -117,7 +117,6 @@
                                             <i class="fas fa-paw"></i>
                                         </div>
                                         <p>{{mascota.sexo}}</p>
-                                        <p>{{mascota.fotoAnimales[0].direccion}}</p>
                                     </div>
                                 </li>
                                 <li>
